--- a/css/css.css
+++ b/css/css.css
@@ -313,6 +313,7 @@ img.img-ind {
 }
 #cssmenu > ul > li {
   float: left;
+  background-size: 0;
 }
 #cssmenu > ul > li.active a {
   background: #e6e6e6;
@@ -502,11 +503,21 @@ img.img-ind {
   }
   #cssmenu ul li {
     flex: 1 1 20%;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
   }
   #cssmenu ul li a {
     width: 100%;
     height: 100%;
     padding: 0;
+    background: transparent;
+  }
+  #cssmenu > ul > li.active {
+    background-color: #fff;
+  }
+  #cssmenu > ul > li.active a {
+    background: transparent;
   }
   .menu-icon {
     width: 100%;
@@ -514,8 +525,9 @@ img.img-ind {
   }
 
   #content {
-    width: 100vw;
+    width: calc(100vw - 17px);
     height: auto;
+    max-width: 100%;
   }
 
   #row {
@@ -535,6 +547,7 @@ img.img-ind {
   #c_center-c > div {
     height: 100% !important;
     width: 100vw;
+    max-width: 100%;
   }
   #c_center img {
     width: 93vw;
@@ -545,6 +558,7 @@ img.img-ind {
     width: 100vw !important;
     padding-top: 30px;
     font-size: 26px !important;
+    max-width: 100%;
   }
   img[title="Back 1 panels"] {
     left: 2px !important;
@@ -560,8 +574,8 @@ img.img-ind {
 
   /* grid styles */
   #content_container {
-    width: 100vw;
-
+    /* width: 100vw; */
+    max-width: 100%;
   }
 
   .grid_4 {
